// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses sumamary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $3.95
  </h1>
</div>
`;

exports[`should correctly render expenses sumamary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
  </h1>
</div>
`;
